# ChangeLog for dev-perl/Test-Most
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Most/ChangeLog,v 1.18 2013/05/16 20:09:11 ago Exp $

  16 May 2013; Agostino Sarubbo <ago@gentoo.org> Test-Most-0.310.0.ebuild:
  Stable for hppa, wrt bug #461140

  15 May 2013; Agostino Sarubbo <ago@gentoo.org> Test-Most-0.310.0.ebuild:
  Stable for x86, wrt bug #461140

  15 May 2013; Agostino Sarubbo <ago@gentoo.org> Test-Most-0.310.0.ebuild:
  Stable for amd64, wrt bug #461140

*Test-Most-0.310.0 (07 Sep 2012)

  07 Sep 2012; Torsten Veller <tove@gentoo.org> +Test-Most-0.310.0.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  14 Apr 2012; Markus Meier <maekke@gentoo.org> Test-Most-0.250.0.ebuild:
  x86 stable, bug #408579

  20 Mar 2012; Jeroen Roovers <jer@gentoo.org> Test-Most-0.250.0.ebuild:
  Stable for HPPA (bug #408579).

  20 Mar 2012; Agostino Sarubbo <ago@gentoo.org> Test-Most-0.250.0.ebuild:
  Stable for amd64, wrt bug #408581

  18 Feb 2012; Torsten Veller <tove@gentoo.org> -Test-Most-0.230.0.ebuild:
  Cleanup

  08 Feb 2012; Jeroen Roovers <jer@gentoo.org> Test-Most-0.250.0.ebuild:
  Marked ~hppa (bug #399649).

*Test-Most-0.250.0 (06 Sep 2011)

  06 Sep 2011; Torsten Veller <tove@gentoo.org> +Test-Most-0.250.0.ebuild:
  Version bump

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Test-Most-0.23.ebuild:
  Cleanup

*Test-Most-0.230.0 (28 Aug 2011)

  28 Aug 2011; Torsten Veller <tove@gentoo.org> +Test-Most-0.230.0.ebuild:
  Change version scheme

  20 Oct 2010; Torsten Veller <tove@gentoo.org> -Test-Most-0.21.ebuild,
  -Test-Most-0.22.ebuild:
  Cleanup

*Test-Most-0.23 (09 Sep 2010)

  09 Sep 2010; Torsten Veller <tove@gentoo.org> +Test-Most-0.23.ebuild:
  Version bump

*Test-Most-0.22 (09 Aug 2010)

  09 Aug 2010; Torsten Veller <tove@gentoo.org> +Test-Most-0.22.ebuild:
  Version bump
