@@ -1,8 +1,8 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Most/Test-Most-0.310.0.ebuild,v 1.4 2013/05/16 20:09:11 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Most/Test-Most-0.310.0-r1.ebuild,v 1.1 2014/08/23 22:19:19 axs Exp $
 
-EAPI=4
+EAPI=5
 
 MODULE_AUTHOR=OVID
 MODULE_VERSION=0.31
