@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/Test-Most
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Most/ChangeLog,v 1.18 2013/05/16 20:09:11 ago Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Most/ChangeLog,v 1.19 2014/08/23 22:19:19 axs Exp $
+
+*Test-Most-0.310.0-r1 (23 Aug 2014)
+
+  23 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
+  +Test-Most-0.310.0-r1.ebuild, -Test-Most-0.310.0.ebuild:
+  bumped EAPI to 5; committed directly to stable as no other changes present and
+  revbump helps stable systems to keep from dieing on perl-5.18 upgrade
 
   16 May 2013; Agostino Sarubbo <ago@gentoo.org> Test-Most-0.310.0.ebuild:
   Stable for hppa, wrt bug #461140
